outputs/main/reevo-qd_bpp_online_2025-07-26_01-19-44/problem_iter15_response3.txt_stdout.txt
Traceback (most recent call last):
  File "/home/dokhanhnam1199/QD/problems/bpp_online/eval.py", line 9, in <module>
    from gpt import priority_v2 as priority
  File "/home/dokhanhnam1199/QD/problems/bpp_online/gpt.py", line 35
    large_gap_boost = np.where((bins_remain_cap >= item) & (bins_remain_cap > avg_remaining), 2, 0)
                                                                                                   ^
IndentationError: unindent does not match any outer indentation level
12
2
